--- a/control/controlapp/src/app/device-list/device-list.component.html
+++ b/control/controlapp/src/app/device-list/device-list.component.html
@@ -10,7 +10,7 @@
         <!-- Cards -->
         <div class="col-sm-7 col-md-8 col-lg-9">
             <div class = "row">
-                <div class="card justify-content-between card-adapt" *ngFor="let device of devices.devices">
+                <div class="card justify-content-between card-adapt" *ngFor="let device of deviceList.devices">
                     <a class="card-clickable flex-fill" (click)="onClick(device)">
                         <img class="card-img" width="64" 
                             *ngIf="device !== undefined && device.value !== undefined && device.pictures !== undefined && device.pictures['on']" 
