--- a/control/controlapp/src/app/app.component.html
+++ b/control/controlapp/src/app/app.component.html
@@ -2,6 +2,6 @@
     <router-outlet></router-outlet>
             
     <!-- Footer -->
-    <footer>
+    <p class="text-center d-none d-sm-block" >
         Is your home really smart? Mangar2/yaha on github&nbsp;
-    </footer>
+    </p>
