--- a/control/controlapp/src/app/breadcrumb/breadcrumb.component.html
+++ b/control/controlapp/src/app/breadcrumb/breadcrumb.component.html
@@ -1,4 +1,4 @@
-<div class="col">
+<div class="col mt-3">
     <ol class="breadcrumb">
       <li class="breadcrumb-item" 
         *ngFor="let item of breadcrumbList; let i = index"
