--- a/control/controlapp/src/app/device-list/device-list.component.html
+++ b/control/controlapp/src/app/device-list/device-list.component.html
@@ -3,10 +3,9 @@
 <div class="container-xl" role="main">
 
     <div class = "row mt-md-3">
-        <div class="col d-sm-block">
+        <div class="col mb-2 d-sm-block">
             <app-location-menu></app-location-menu>
         </div>
-
         <!-- Cards -->
         <div class="col-sm-7 col-md-8 col-lg-9">
             <div class = "row">
