--- a/control/controlapp/src/app/top-bar/top-bar.component.html
+++ b/control/controlapp/src/app/top-bar/top-bar.component.html
@@ -1,5 +1,5 @@
 <!-- Toolbar -->
-<nav class="navbar navbar-light bg-light">
+<nav class="d-none d-sm-block navbar navbar-light bg-light">
     <a class="navbar-brand" [routerLink]="['/']">
         Home
     </a>
