--- a/control/controlapp/src/app/location-menu/location-menu.component.html
+++ b/control/controlapp/src/app/location-menu/location-menu.component.html
@@ -2,7 +2,7 @@
 <ul class="list-group">
     <a class='list-group-item list-group-item-action' 
         *ngFor="let item of menu.menueEntries" 
-        [class.font-weight-bold]="item.link === baseTopic"
+        [class.font-weight-bold]="item.link === menu.baseTopic"
         [class.pl-3]="item.link !== menu.baseTopic"
         [class.active]="activeTopic === item.link"
         [routerLink]="['/' + item.link]" >
