--- a/control/controlapp/src/app/location-menu/location-menu.component.html
+++ b/control/controlapp/src/app/location-menu/location-menu.component.html
@@ -1,5 +1,5 @@
 
-<ul class="list-group">
+<ul class="list-group" *ngIf="menu">
     <a class='list-group-item list-group-item-action' 
         *ngFor="let item of menu.menueEntries" 
         [class.font-weight-bold]="item.link === menu.baseTopic"
