--- a/control/controlapp/src/app/device-list/device-list.component.html
+++ b/control/controlapp/src/app/device-list/device-list.component.html
@@ -12,9 +12,9 @@
                 <div class="card justify-content-between card-adapt" *ngFor="let device of deviceList.devices">
                     <a class="card-clickable flex-fill" (click)="onClick(device)">
                         <img class="card-img ml-1 mt-1 mb-1" width="64" 
-                            *ngIf="device !== undefined && device.value !== undefined && device.pictures !== undefined && device.pictures['on']" 
-                            alt="bild" 
-                            [src]="device.pictures[device.value] ? device.pictures[device.value] : device.pictures['on']" 
+                            *ngIf="device.picture !== undefined"
+                            alt="bild"
+                            [src]="device.picture"
                             />
                         <div class="card-text col-9">
                             <span class="card-name">{{ device.name }}</span>
